--- a/Почта.html
+++ b/Почта.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="prozrazh">
+            <div class="prozrach">
                 <div class="poz">
                     <a href="#input" class="register">
                         <img src="войти.png" width="40" height="39" /> Вход/Регистрация
@@ -31,9 +31,12 @@
                 <a href="#vakansii"><div class="chto">Вакансии</div></a>
             </dannie>
         </header>
-        <fon class="fona">
+        <chernfon></chernfon>
+        <div class="fona">
             <br />  <br />  <br />  <br />
-            <Reklama>
+            <div class="reklama"></div>
+            <div class="chernfon"></div>
+            <div class="block">
                 <richi class="interes">
                     <ul id="tabl">
                         <li>Ежедневно развивающийся пункт отслеживания!</li>
@@ -41,9 +44,8 @@
                         <li>Молодая, но целеустремненная кампания</li>
                         <li>Готовы ответить на все ваши вопросы в кратчайшие сроки</li>
                     </ul>
-                    <div class=""></div>
                 </richi>
-            </Reklama>
+            </div>
             <zachem>
                 <pre id="shrift">Чем поможет и для чего нужен WAMT?</pre><br />
                 <pre>В момент, когда вам понадобится отправить или получить посылку, вы всегда сможете воспользовать "WAMT?"
@@ -58,7 +60,7 @@
             </article>
             <aside>
             </aside>
-        </fon>
+        </div>
         <footer>
             <div id="picture1"></div>
 
